# app-tests-demo

./: .gitignore  Dockerfile  Dockerfile.e2e  Dockerfile.tests  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  test.db
app/: config.py  crud.py  database.py  main.py  models.py  schemas.py  services.py
app/routers/: health.py  tools.py
frontend/: Dockerfile  index.html  nginx.conf
patches/: 00_breaking.patch  01_fix_unit.patch  02_fix_integration.patch  03_fix_smoke.patch  04_fix_performance.patch
scripts/: init-db.sh
tests/: conftest.py
tests/e2e/: conftest.py  test_github_link.py  test_star_icon.py  test_sync.py
tests/integration/: test_tools_api.py
tests/performance/: locustfile.py
tests/smoke/: test_smoke.py
tests/unit/: test_services.py
