[project]
name = "app-tests-demo"
version = "0.1.0"
description = "DevOps Tools Rating API — a FastAPI demo project for teaching testing strategies"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "psycopg2-binary",
    "pydantic",
    "httpx",
]

[dependency-groups]
test = [
    "pytest==7.4.4",
    "pytest-cov==4.1.0",
    "httpx==0.26.0",
    "locust==2.20.0",
    "requests==2.31.0",
]
# End-to-end (browser) tests. Selenium drives a Chrome browser running in the
# `selenium` Docker Compose service; installed in Dockerfile.e2e.
e2e = [
    "pytest==7.4.4",
    "selenium==4.27.1",
]

[tool.uv]
package = false
